# AGEO

./: .gitignore  CMakeLists.txt  Field.hpp  Hello.cpp  MPI_conf.cpp  MPI_conf.h  MPI_conf.hpp  Makefile  ageo.cpp  diagnosis.hpp  equilibrium.hpp  main.cpp
include/: mpi.h
